creating api and protecting  roles permission and other
