# app/serializers/permission_serializer.rb
@@ -1,0 +1,3 @@
+class PermissionSerializer < ActiveModel::Serializer
+  attributes :id, :created_at, :updated_at, :action, :resource
+end
